@@ -27,11 +27,11 @@ libclipsmm_la_LIBADD = $(PROJECT_LIBS)
 library_includedir = $(includedir)/@PACKAGE_NAME@-@PACKAGE_RELEASE@/@PACKAGE_NAME@
 
 library_include_HEADERS = clipsmm.h environment.h value.h factory.h template.h \
-				fact.h utility.h enum.h rule.h object.h environmentobject.h module.h \
-		defaultfacts.h activation.h any.h global.h
+					fact.h utility.h enum.h rule.h object.h environmentobject.h module.h \
+			defaultfacts.h activation.h any.h global.h function.h
 libclipsmm_la_SOURCES = environment.cpp factory.cpp template.cpp fact.cpp \
-					utility.cpp enum.cpp rule.cpp object.cpp environmentobject.cpp value.cpp module.cpp \
-		defaultfacts.cpp activation.cpp global.cpp
+						utility.cpp enum.cpp rule.cpp object.cpp environmentobject.cpp value.cpp module.cpp \
+			defaultfacts.cpp activation.cpp global.cpp function.cpp
 
 
 
